# explainability-report-mcp

./: .cursorrules  .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  acp.json  llms.txt  mcp.json  pyproject.toml  server.json  server.py  smithery.yaml  test_server.py
.github/workflows/: test.yml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
tests/: test_server.py
