[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "explainability-report-mcp"
version = "1.0.0"
description = "AI explainability and transparency reports for AI agents. Instant transparency scan, model cards, decision explanations, Article 13 audits, impact assessments. Zero-config free tier. Built by MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "explainability", "transparency", "ai-governance", "meok"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/explainability-report-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
explainability-report-mcp = "server:main"
